# scratch

./: linux_info.md
config/: _md5.md5  dot_bashrc  dot_vimrc
cpp/astro/: CMakeLists.txt  calendar.cpp  comparable.h  datetime.cpp  datetime.h  main.cpp  moon.h  test_datetime.cpp
python/enum/: enum.py
python/jdn/: julian.py  readme.md  test_julian.py
